Unidad 8 done | DB

--- a/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
@@ -22,10 +22,12 @@ Por lo general se suele asumir que todos los archivos están ordenados secuencia
 
 Los índices secundarios son aquellos cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo, por lo tanto, estos deben ser densos, con una entrada en el índice por cada valor de la clave de búsqueda, y un puntero a cada registro del archivo. Un índice secundario sobre una clave candidata es como un índice denso primario, con la particularidad de que los registros apuntados por los sucesivos valores del índice no están almacenados secuencialmente según ese campo.
 Si la clave de búsqueda de un índice secundario no es una clave candidata, no sería suficiente apuntar solo al primer registro de cada valor de la clave de búsqueda, ya que el resto de registros con el mismo valor de la clave de búsqueda podrían estar en cualquier otro sitio del archivo, para solucionar este problema se puede usar una estructura multinivel para implementar los índices secundarios sobre claves de búsquedas que no sean claves candidatas.
+Siguiendo el orden de un índice primario, una búsqueda secuencial es eficiente porque los registros del archivo están guardados físicamente en el mismo orden que el índice. No se puede almacenar el archivo ordenado físicamente por el orden de la clave de búsqueda del índice primario y la clave de búsqueda del índice secundario al mismo tiempo, ya que el orden de la clave de búsqueda secundaria y el orden físico difieren. Si se intenta examinar el archivo secuencialmente por el orden de la clave de búsqueda secundaria, es muy probable que la lectura de cada bloque suponga la lectura de un nuevo bloque del disco.
 
->[!tldr] Consideraciones para los Índices Secundarios
->Siguiendo el orden de un índice primario, una búsqueda secuencial es eficiente porque los registros del archivo están guardados físicamente en el mismo orden que el índice. No se puede almacenar el archivo ordenado físicamente por el orden de la clave de búsqueda del índice primario y la clave de búsqueda del índice secundario al mismo tiempo, ya que el orden de la clave de búsqueda secundaria y el orden físico difieren. Si se intenta examinar el archivo secuencialmente por el orden de la clave de búsqueda secundaria, es muy probable que la lectura de cada bloque suponga la lectura de un nuevo bloque del disco.
->Si un archivo tiene varios índices, siempre que se modifique el archivo, se debe actualizar cada uno de ellos. Los índices secundarios mejoran el rendimiento de las consultas que emplean claves que no son la clave de búsqueda primaria, pero requieren de tiempo adicional al actualizar los archivos.
+>[!tldr] Índices de Cobertura
+>Los ***índices de cobertura*** almacenan los valores de algunos atributos junto con los punteros a los registros. El almacenamiento de valores de atributo adicionales es útil en los índices secundarios, ya que permite responder algunas consultas utilizando únicamente el índice, sin ni siquiera buscar en los registros de datos.
+
+Si un archivo tiene varios índices, siempre que se modifique el archivo, se debe actualizar cada uno de ellos. Los índices secundarios mejoran el rendimiento de las consultas que emplean claves que no son la clave de búsqueda primaria, pero requieren de tiempo adicional al actualizar los archivos.
 
 ### Índices Densos y Dispersos
 
