--- a/4º Año/Bases de Datos/Unidad 8/3. Organizacion por Asociacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/3. Organizacion por Asociacion.md
@@ -45,7 +45,16 @@ Donde $d$ es un factor normalmente con un valor cercano a $0,2$. Aun con la asig
 
 La forma de la estructura asociativa que se acaba de describir se denomina algunas veces ***asociación cerrada***. Existe otra alternativa llamada asociación abierta, en la cual se fija el conjunto de cajones y no hay cadenas de desbordamiento. Si un cajón está lleno, los registros se insertan en algún otro cajón del conjunto inicial $C$ de cajones. Una política para selección el cajón de destino es utilizar el siguiente cajón que tenga espacio, esta política recibe el nombre de ***ensayo lineal***. Aun así las asociaciones cerradas son las más utilizadas por los sistemas de gestión de bases de datos.
 
-### Asociación Dinámica
+### Índices Asociativos
+
+La asociatividad se puede utilizar no solamente para la organización de archivos sino también para la creación de estructuras de índice. Un índice asociativo organiza las claves de búsqueda y sus punteros asociados dentro de una estructura de archivo asociativo. Estos índices se construyen de la siguiente manera:
+
+1. Se aplica una función de asociación sobre la clave de búsqueda para identificar un cajón.
+2. Se almacenan la clave y los punteros asociados en el cajón o en los cajones de desbordamiento.
+
+Se usa el término índice asociativo o índice hash para denotar las estructuras de archivo asociativo, así como los índices secundarios asociativos.
+
+## Asociación Dinámica
 
 La necesidad de fijar el conjunto $C$ de direcciones de cajón presenta un problema, ya que la mayoría de las bases de datos crecen con el tiempo. Si se va a utilizar la asociación estática tenemos tres opciones:
 
@@ -94,13 +103,4 @@ Nótese que en este momento, varios cajones se pueden fusionar, reduciendo el ta
 >	- La búsqueda implica un nivel adicional de indirección, ya que se debe acceder a la TDC antes que acceder al propio cajón. Esta referencia extra tiene una repercusión menor en el rendimiento.
 >
 >Aunque las estructuras asociativas que se discutieron con anterioridad no tienen este nivel extra de indirección, pierden su leve ventaja en el rendimiento cuando se llenan.
-
-## Índices Asociativos
-
-La asociatividad se puede utilizar no solamente para la organización de archivos sino también para la creación de estructuras de índice. Un índice asociativo organiza las claves de búsqueda y sus punteros asociados dentro de una estructura de archivo asociativo. Estos índices se construyen de la siguiente manera:
-
-1. Se aplica una función de asociación sobre la clave de búsqueda para identificar un cajón.
-2. Se almacenan la clave y los punteros asociados en el cajón o en los cajones de desbordamiento.
-
-Se usa el término índice asociativo o índice hash para denotar las estructuras de archivo asociativo, así como los índices secundarios asociativos.
 
