--- a/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
+++ b/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
@@ -1,3 +1,5 @@
+## Consultas por Multiples Claves de Búsqueda
+
 Hasta ahora se ha asumido implícitamente que se utiliza solamente un índice o tabla de asociación para procesar una consulta en una relación. Sin embargo, para ciertos tipos de consultas es ventajoso el uso de múltiples claves. Como ejemplo consideremos la siguiente consulta:
 
 ```sql
@@ -26,7 +28,7 @@ Si estas condiciones ocurrieran, se tendrían que examinar un gran número de pu
 El empleo de una estructura de índice ordenado con múltiples atributos tiene algunas deficiencias. Tomemos la consulta dada como ejemplo anteriormente, allí se podría responder a esta consulta usando un índice ordenado con claves de búsqueda compuestas con la desventaja que debido a la ordenación de los registros en el archivo, es probable que cada registro esté en un bloque diferente de disco, causando muchas operaciones de E/S.
 Para acelerar el procesamiento en general de consultas con varias claves de búsqueda se pueden emplear varias estructuras especiales, como lo son los ***archivos en retícula (Grid Files)*** o ***los mapas de bits***.
 
-## Archivos Reticulares
+### Archivos Reticulares
 
 Los ***archivos en retícula*** poseen la siguiente estructura:
 
@@ -35,7 +37,7 @@ Los ***archivos en retícula*** poseen la siguiente estructura:
 En los cuales las escalas lineales se deben escoger de tal manera que los registros estén uniformemente distribuidos a través de las celdas. Este tipo de estructuras también es adecuada para consultas que impliquen solo una clave de búsqueda.
 Si bien los archivos en retícula proporcionan un descenso significativo en el tiempo de procesamiento de consultas multiclave, implican un gasto adicional de espacio, así como una degradación del rendimiento al insertar y borrar registros, además de ser difícil elegir una división en los rangos de las claves para que la distribución de las claves sea uniforme.
 
-## Mapas de Bits
+### Mapas de Bits
 
 Los índices de ***mapas de bits*** son un tipo de índices especializado para consultas sencillas sobre varias claves, aunque cada índice de mapas de bits se construya para una única clave. Para usarlos, los registros de la relación deben estar numerados secuencialmente, de este modo dado un número $n$ es fácil recuperar el registro con número $n$. Esto es particularmente fácil de conseguir si los registros tienen un tamaño fijo y están asignados en bloques consecutivos de un archivo.
 El número de registro se puede traducir fácilmente en un número de bloques y en un número que identifica el registro dentro del bloque. En este contexto un mapa de bits no es más que un arreglo de bits. En su forma más simple, un índice de mapas de bits sobre un atributo $A$ de la relación $r$ consiste en un mapa de bits para cada valor que pueda tomar $A$. Cada mapa de bits tiene tantos bits como número de registros tenga la relación. El í-ésimo bit del mapa de bits para el valor $v_j$ se establece en 1 si el registro con número $i$ tiene el valor $v_j$ para el atributo $A$, el resto de bits del mapa de bits se establecen a 0.
@@ -47,6 +49,7 @@ Los mapas de bits también pueden utilizarse para contar el número de tuplas qu
 >Así mismo, la unión de mapas de bits se implementa de la misma manera que la intersección, con la diferencia que en este caso se utiliza la instrucción de bits `or`.
 
 Adicionalmente, los índices de mapas de bits son generalmente muy pequeños comparados con el tamaño real de la relación. Los registros tienen generalmente de decenas a centenas de bytes, mientras que un único bit representa a un registro en el mapa de bits.
+Si bien los mapas de bits pueden ser implementados sobre cualquier campo, estos resultan extremadamente útiles y eficientes para aquellos campos cuyos dominio de valores sea relativamente pequeño, como es el caso del sexo.
 
 >[!tldr] Actualización de los Índices de Mapas de Bits.
 >El borrado de registros crea huecos en la secuencia de registros, como el desplazamiento de los registros o de los números de registro para rellenar los huecos sería excesivamente costoso. Para reconocer los registros borrados se puede almacenar un mapa de bits de existencia en el que el bit $i$ es 0 si el registro $i$ no existe, y 1 en caso contrario.
