--- a/4º Año/Bases de Datos/Unidad 8/5. Procesamiento de Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 8/5. Procesamiento de Consultas SQL.md
@@ -1,21 +1,22 @@
-El procesamiento de consultas hace referencia a una serie de actividades implicadas en la extracción de datos de una base de datos. Estas actividades incluyen la traducción de consultas expresadas en lenguajes de bases de datos de alto nivel en expresiones implementadas en el nivel físico del sistema, así como transformaciones de optimización de consultas y la evaluación real de las mismas. Los pasos involucrados en el procesamiento de consultas involucra el ***análisis y traducción***, la ***optimización*** y finalmente la ***evaluación*** de la consulta.
+El procesamiento de consultas involucra una serie de actividades implicadas en la extracción de datos de una base de datos. Estas actividades incluyen la traducción de consultas `SQL` de alto nivel a expresiones implementadas en el nivel físico del sistema, así como transformaciones de optimización de consultas y la evaluación real de las mismas. Los pasos involucrados en el procesamiento de consultas involucra el ***análisis y traducción***, la ***optimización*** y finalmente la ***evaluación*** de la consulta.
 
 ![[procesamiento-consultas.png]]
 
+El procesamiento de consultas puede realizarse de forma compilada o en tiempo real. En caso de la compilación, las bases de datos procesan la consulta y generan un archivo que contiene todos los pasos que debe realizar la base de datos para extraer los datos de forma correcta. El procesamiento en tiempo real implica el procesamiento y posterior ejecución de la consulta, sin generar ningún archivo adicional.
 La primera acción que el sistema tiene que emprender para procesar una consulta es su traducción a su formato interno. Este proceso de traducción es similar al trabajo que realiza el analizador léxico y semántico de un compilador convencional, construyendo un árbol para el análisis de la consulta, que se transformará posteriormente en una expresión del álgebra relacional.
 
->[!info] Procesamiento de Vistas
->Si la consulta estuviera expresada en términos de una vista, la fase de traducción también sustituye todas las referencias a vistas por las expresiones del álgebra relacional que las definen.
+>[!caution] Representación de las Consultas a las Bases de Datos
+>Con fines didácticos, todas las explicaciones se realizarán utilizando el álgebra relacional como representación intermedia en el procesamiento y optimización de consultas en bases de datos. Actualmente, las bases de datos emplean una representación intermedia de las consultas SQL, similar a las utilizadas por los compiladores e interpretes, para procesamiento de las consultas.
 
 Dada una consulta hay generalmente distintos métodos para obtener la respuesta. Por ejemplo, ya se ha visto que en SQL se puede expresar una consulta de diferentes maneras. Cada consulta SQL puede traducirse a diferentes expresiones del álgebra relacional. Además de esto, la representación de una consulta en el álgebra relacional especifica de manera parcial cómo evaluar la consulta.
 Para especificar completamente cómo evaluar una consulta, no basta con proporcionar la expresión del álgebra relacional, además hay que anotar en ella las instrucciones que especifiquen cómo evaluar cada operación, este nuevo parámetro podría servir para establecer las prioridades en las consultas.
-Las operaciones del álgebra relacional anotadas con instrucciones sobre su evaluación reciben el nombre de ***primitivas de evaluación***. El ***motor de ejecución de consultas*** utilizan secuencias de operaciones primitivas para escoger y establecer un ***plan de ejecución de la consulta*** o ***plan de evaluación de la consulta***, para posteriormente ejecutarlo y devolver su respuesta a la consulta.
+Las operaciones del álgebra relacional anotadas con instrucciones sobre su evaluación reciben el nombre de ***primitivas de evaluación***. El ***motor de ejecución de consultas*** utilizan secuencias de operaciones primitivas para escoger y establecer el ***plan de ejecución de la consulta*** o ***plan de evaluación de la consulta***, que posteriormente será ejecutado.
 Los diferentes planes de evaluación de una misma consulta dada pueden tener costes distintos. No se puede esperar que los usuarios escriban las consultas de manera que sugieran el plan de evaluación más eficiente. En su lugar, es responsabilidad del sistema construir un plan de evaluación que minimice el coste de la evaluación de la consulta; esta tarea se denomina ***optimización de consultas***.
 
 ## Optimización de Consultas
 
-La optimización de consultas es el proceso de selección del plan de evaluación de las consultas más eficiente de entre las muchas estrategias generalmente disponibles para el procesamiento de una consulta dada, especialmente si la consulta es compleja. Ya que no se espera que los usuarios escriban consultas de forma eficiente, por lo que es trabajo del gestión de la base de datos elegir plan de evaluación menos costoso.
-Un aspecto de la optimización de las consultas tiene lugar en el nivel del álgebra relacional, donde el sistema intenta hallar una expresión que sea equivalente a la expresión dada, pero cuya ejecución sea más eficiente. Otro aspecto es la elección de la estrategia para el procesamiento de la consulta, como puede ser la selección del algoritmo que se usará para ejecutar una operación, la selección de los índices concretos a emplear, entre otras.
+La optimización de consultas es el proceso de selección del plan de evaluación de las consultas más eficiente de entre las muchas estrategias generalmente disponibles para el procesamiento de una consulta dada, especialmente si la consulta es compleja.
+Un aspecto de la optimización de las consultas tiene lugar en el nivel del álgebra relacional, donde el sistema intenta hallar expresiones equivalentes a la expresión dada, pero cuya ejecución sea más eficiente. Otro aspecto es la elección de la estrategia para el procesamiento de la consulta, como puede ser la selección del algoritmo que se usará para ejecutar una operación, la selección de los índices concretos a emplear, entre otras.
 
 >[!tldr] Importancia en la Elección de los Planes de Evaluación
 > La diferencia en coste entre una estrategia buena y una mala suele ser sustancial, y puede resultar de varios órdenes de magnitud. Por tanto, merece la pena que el sistema invierta una cantidad importante de tiempo en la selección de una buena estrategia para el procesamiento de la consulta.
@@ -26,7 +27,7 @@ Para hallar el plan de evaluación de consultas menos costoso el optimizador nec
 2. Estimar los costes de cada plan de evaluación.
 3. Anotar las expresiones alternativas resultantes para generar planes distintos de ejecución.
 
-La primera y tercera etapas se entrelazan al momento de la optimización de las consultas, ya que algunas expresiones se generan e inmediatamente son anotadas, por otro lado la segunda etapa se realiza más en segundo plano recopilando información estadística sobre las relaciones involucradas en la consulta.
+La primera y tercera etapa se entrelazan al momento de la optimización de las consultas, ya que algunas expresiones se generan e inmediatamente son anotadas, por otro lado, la segunda etapa se realiza más en segundo plano recopilando información estadística sobre las relaciones involucradas en la consulta.
 Para implementar la primera etapa el optimizador de consultas debe generar expresiones equivalentes a la expresión dada. Se dice que dos expresiones del álgebra relacional son equivalentes si, en cada ejemplar legal de la base de datos, las dos expresiones generan el mismo conjunto de tuplas, la manera de obtener expresiones equivalentes es mediante las ***reglas de equivalencia***, que especifican el modo de transformar una expresión en otra lógicamente equivalente[^1].
 Para optimizar una consulta apropiadamente, el optimizador debe conocer el coste de cada operación. Aunque el coste exacto es difícil de calcular, dado que depende de los siguientes parámetros:
 
@@ -36,47 +37,53 @@ Para optimizar una consulta apropiadamente, el optimizador debe conocer el coste
 - **Costo de uso de memoria**: Cantidad de memoria que se necesitan durante la ejecución de la consulta.
 - **Costo de comunicaciones**: Tiempo de envío de la consulta y de sus resultados desde el sitio donde se ubica la base de datos hasta el terminal donde se originó la consulta.
 
-Por esta razón se opta por realizar estimaciones de costes en lugar de calcularlos de forma exacta. Las estimaciones se calculan a partir de información estadística la cual es almacenado en los catálogos de los sistema de gestión de bases de datos, los datos que estos catálogos contiene son los siguientes:
+En lugar de calcular los costes de forma exacta, los gestores de las bases de datos optan por realizar estimaciones de costes, reduciendo así la sobrecarga y el tiempo de cómputo dedicado al cálculo de los costes. Las estimaciones se calculan a partir de información estadística la cual es almacenado en los catálogos de los sistemas de gestión de bases de datos, los datos que estos catálogos contiene son los siguientes:
 
 1. **El número de registros (r)**: Representa la cantidad total de registros que hay en un fichero o tabla de la base de datos.
 2. **El tamaño medio de los registros (R)**: Indica el tamaño promedio de un registro. Este valor es importante para calcular el espacio que ocupan los datos en almacenamiento.
 3. **El número de bloques (b)**: Refleja la cantidad de bloques de almacenamiento que contiene la tabla o una aproximación de este mismo.
-4. **El factor de bloqueo (bfr)**: Es el número de registros que caben en un bloque. Este factor ayuda a entender la distribución de datos en los bloques.
+4. **El factor de bloque (bfr)**: Es el número de registros que caben en un bloque. Este factor ayuda a entender la distribución de datos en los bloques.
 5. **Índices secundarios y los atributos de indexación**: Permiten acceder a los registros de manera más rápida sin afectar el orden físico de los datos en el disco. Mientras que los atributos de indexación son las columnas que se utilizan para construir estos índices.
 6. **Número de niveles de cada índice multinivel (x)**: Indica la cantidad de niveles que existen en un índice multinivel.
 7. **Número de bloques de índices de primer nivel**: Representa la cantidad de bloques que conforman el primer nivel de un índice. Esto es importante para calcular el número de accesos a bloques necesarios durante una operación de búsqueda.
 
 >[!info] Actualización de los Datos Estadísticos
->Muchos datos estadísticos como el tamaño de las relaciones o la profundidad de los indices multinivel son actualizados de manera constante, pero los gestores de bases de datos no actualizan esta información de forma inmediata ya que representa una sobrecarga sustancial para la base de datos, la mayoría de sistemas de gestión de bases de datos realizan esta actualización en momentos donde la carga del sistema es baja.
->Esto no supone un cambio tan radical en las estimaciones realizadas para cada plan de evaluación de consultas, siempre y cuando el tamaño de las actualizaciones realizadas no posea un tamaño considerable.
+>Muchos datos estadísticos, como el tamaño de las relaciones o la profundidad de los índices multinivel, son actualizados de manera constante, pero los gestores de bases de datos no actualizan esta información de forma inmediata porque este representa una sobrecarga sustancial para la base de datos. La mayoría de sistemas de gestión de bases de datos realizan esta actualización en momentos donde la carga del sistema es baja.
+>Las bases de datos operan de este modo porque la actualización de las estadísticas no supone un cambio sustancial en las estimaciones realizadas para cada plan de evaluación de consultas, siempre y cuando el tamaño de las actualizaciones realizadas no posea un tamaño considerable.
 
-Además de estos datos, la mayoría de las bases de datos almacenan la distribución de los valores de cada atributo en forma de histograma, ya que estos son fáciles de almacenar y utilizan poco espacio en sus catálogos. Los gestores de bases de datos utilizan varios tipos de histogramas, como lo podrían ser los *histograma de equianchura* y los *histograma de equiprofundidad*[^2].
+Además de estos datos, la mayoría de las bases de datos almacenan la distribución de los valores de cada atributo en forma de histograma, en parte porque estos datos son fáciles de almacenar y utilizan poco espacio en sus catálogos. Los gestores de bases de datos utilizan varios tipos de histogramas, como lo podrían ser los *histogramas de equianchura* y los *histogramas de equiprofundidad*[^2].
 
 >[!tldr] Selectividad
->La selectividad es un concepto crucial en el procesamiento de consultas porque ayuda a determinar cuántos registros cumplirán con una condición específica. 
->En este contexto el ***número de valores distintos (d)*** es la cantidad de valores únicos que puede tener un atributo en una tabla de la base de datos. Por ejemplo, si una columna tiene el atributo "ciudad" y en la base de datos hay 10 ciudades diferentes, entonces d=10. Mientras que la ***selectividad*** es la proporción de registros que cumplen una condición de igualdad sobre un atributo. Es una medida de cómo se distribuyen los valores en una columna en relación con una condición específica. Por otro lado, la ***cardinalidad de selección (s)*** de un atributo es el número medio de registros que cumplirán una condición de igualdad sobre ese atributo y se calcula de la siguiente manera:
+>La selectividad es un concepto crucial en el procesamiento de consultas, ya que ayuda a determinar cuántos registros cumplirán con una condición específica. Es una medida que indica cómo se distribuyen los valores de una columna en relación con una condición específica.
+>En este contexto el ***número de valores distintos (d)*** es la cantidad de valores únicos que puede tener un atributo en una tabla de la base de datos. Por ejemplo, si una columna tiene el atributo "ciudad" y en la base de datos hay 10 ciudades diferentes, entonces d=10. Mientras que la ***selectividad (sl)*** es la proporción de registros que cumplen una condición de igualdad sobre un atributo. Por otro lado, la ***cardinalidad de selección (s)*** de un atributo es el número medio de registros que cumplirán una condición de igualdad sobre ese atributo y se calcula de la siguiente manera:
 >$$s = sl \times r$$
->En donde $sl$ es la selectividad y $r$ es la cantidad de registros de una tabla. En base a esto podemos llegar a las siguientes conclusiones:
->- Si el atributo es una clave, es decir, cada valor es único, entonces $d = r$ y $sl = 1/r$, por lo tanto $s = 1$.
->- Si el atributo no es clave y los $d$ valores están distribuidos uniformemente $sl = 1 / d$ y por lo tanto $s = r/d$.
+>En donde $sl$ es la selectividad y $r$ es la cantidad de registros de una tabla. Basándonos en esto podemos llegar a las siguientes conclusiones:
+>- Si el atributo es una clave, es decir, cada valor es único, entonces $d = r$ y $sl = 1/r$, por lo tanto, $s = 1$.
+>- Si el atributo no es clave y los $d$ valores están distribuidos uniformemente $sl = 1 / d$ y, por lo tanto, $s = r/d$.
 
-### Elección de los Planes de Evaluación
+## Elección de los Planes de Evaluación
 
-La generación de expresiones sólo es una parte del proceso de optimización de consultas, ya que cada operación de la expresión puede implementarse con algoritmos diferentes. Por tanto, se necesita un plan de evaluación para definir exactamente el algoritmo que se usará para cada operación y el modo en que se coordinará la ejecución de las operaciones.
-Cada una de las operaciones relacionales se pueden implementar en varios algoritmos diferentes, lo que da lugar a planes de evaluación alternativos, sumado a que adicionalmente hay que tomar decisiones sobre el ***encauzamiento***, es decir, sobre el orden en el que estas operaciones relacionales deben ser realizadas.
-Una manera de escoger un plan de evaluación para una expresión de consulta es sencillamente escoger el algoritmo más económico para evaluar cada operación. Sin embargo, puede que el algoritmo más económico no siempre sea la forma más optima de resolver una expresión, debido a que otros algoritmos pueden proporcionarnos ciertas ventajas en situaciones específicas, por lo que al momento de seleccionar un plan de evaluación no solo se debe considerar la expresión de menor costo sino también los algoritmos de resolución de cada operación relacional.
-Hay dos enfoques generales a la hora de seleccionar el algoritmo de evaluación adecuado. El primero busca todos los planes y escoge el mejor de una manera basada en los costes, mientras que el segundo usa la heurística para escoger el plan. Cabe aclarar que los optimizadores de consultas reales incorporan elementos de ambos enfoques.
+La generación de expresiones solamente es una parte del proceso de optimización de consultas, ya que cada operación de una expresión puede implementarse con algoritmos diferentes. Por esta razón se necesita un plan de evaluación para definir exactamente el algoritmo que se usará para cada operación y el modo en que se coordinará la ejecución de las operaciones.
+Cada una de las operaciones relacionales se pueden implementar en varios algoritmos diferentes e incluso utilizar diferentes estructuras de índices, lo que da lugar a planes de evaluación alternativos. Además, hay que tomar decisiones sobre el ***encauzamiento*** de las operaciones, es decir, el orden en el que estas operaciones relacionales deben ser realizadas.
+Una manera de escoger un plan de evaluación para una expresión de consulta es sencillamente escoger el algoritmo más económico para evaluar cada operación. Sin embargo, puede que el algoritmo más económico no siempre sea la forma más óptima de resolver una expresión, debido a que otros algoritmos pueden proporcionarnos ciertas ventajas en ciertas ocasiones, por lo que al momento de seleccionar un plan de evaluación no solo se debe considerar la expresión de menor costo sino también los algoritmos de resolución de cada operación relacional.
+Hay dos enfoques generales a la hora de seleccionar el algoritmo de evaluación adecuado. El primero busca todos los planes y escoge el mejor basándose en los costes, mientras que el segundo usa la heurística para escoger el plan. Cabe aclarar que los optimizadores de consultas reales incorporan elementos de ambos enfoques.
 
-- **Operación basada en costes**. Los optimizadores basados generan una gama de planes de evaluación a partir de la consulta dada empleando las reglas de equivalencia y escogen el de coste mínimo. Para las consultas complejas el número de planes de consulta diferentes que son equivalentes a un plan dado puede ser grande. Para evitar esto se puede desarrollar un algoritmo de ***programación dinámica*** para hallar los órdenes de las operaciones, almacenado los resultados obtenidos y volviéndolos a utilizar, reduciendo enormemente el tiempo de ejecución[^3].
+- **Operación basada en costes**. Los optimizadores generan una gama de planes de evaluación a partir de la consulta dada empleando reglas de equivalencia, para posteriormente escogen el de coste mínimo. Para las consultas complejas el número de planes de consulta diferentes que son equivalentes a un plan dado puede ser grande. Para evitar esto se puede desarrollar un algoritmo de ***programación dinámica*** para hallar los órdenes de las operaciones, almacena los resultados obtenidos y vuelve a utilizarlos en próximas consultas, reduciendo enormemente el tiempo de ejecución[^3].
 
 >[!tldr] Orden de Reunión de las Relaciones
->El orden en que la reunión de un conjunto de relaciones genera las tuplas también es importante para hallar el mejor orden global de reunión, ya que puede afectar al coste de las reuniones posteriores. Se dice que un ***orden determinado*** de las tuplas es un orden interesante si puede resultar útil para alguna operación posterior.
+>El orden en que las reunión de un conjunto de relaciones genera las tuplas también es importante para hallar el mejor orden global de reunión, ya que puede afectar al coste de las reuniones posteriores. Se dice que un ***orden determinado*** de las tuplas es un orden interesante si puede resultar útil para alguna operación posterior.
 
-- **Heurística de optimización**. Un inconveniente de la optimización basada en costes es el coste de la propia optimización. Este coste puede reducirse mediante algoritmos inteligentes, aun así el número de planes de evaluación distintos para una consulta puede ser muy grande y buscar el plan óptimo sigue teniendo un coste muy alto. Por ello, muchos sistemas usan reglas heurística para reducir el coste de la optimización. Un ejemplo de regla heurística puede ser resolver las operaciones de selección tan pronto como sea posible. Los optimizadores heurísticos usan esta regla sin averiguar si se reduce el coste mediante esta transformación, por lo general la aplicación de estas reglas suele aportar una reducción al coste, aunque no siempre.
+- **Heurística de optimización**. Un inconveniente de la optimización basada en costes es el coste de la propia optimización, dicho coste puede reducirse mediante algoritmos inteligentes, pero aun así el número de planes de evaluación distintos para una consulta puede ser muy grande y buscar el plan óptimo sigue siendo costoso. Por ello, muchos sistemas usan reglas heurísticas para reducir el coste de la optimización. Un ejemplo de regla heurística puede ser resolver las operaciones de selección tan pronto como sea posible. Los optimizadores heurísticos usan esta regla sin averiguar si se reduce el coste mediante esta transformación, por lo general la aplicación de estas reglas suele aportar una reducción al coste, aunque no siempre.
 
 >[!info] Heurística para la Proyección
->La operación proyección, como la operación selección, reduce el tamaño de las relaciones. Por tanto, siempre que haya que generar una relación temporal, resulta ventajoso aplicar inmediatamente cuantas proyecciones sea posible. Aunque suele resultar mejor llevar a cabo las selecciones antes que las proyecciones, ya que las selecciones tienen la posibilidad de reducir mucho el tamaño de las relaciones y permiten el empleo de índices para tener acceso a las tuplas.
+>Las operaciones de proyección y selección, reduce el tamaño de las relaciones, Por lo tanto, siempre que haya que generar una relación temporal, resulta ventajoso aplicar inmediatamente cuantas proyecciones sea posible. Aunque suele resultar mejor llevar a cabo las selecciones antes que las proyecciones, ya que las selecciones tienen la posibilidad de reducir mucho el tamaño de las relaciones y permiten el empleo de índices para tener acceso a las tuplas.
 
-[^1]: Para saber cuales son las reglas de equivalencia y sus propiedades ver página 477 del Silberschatz.
+## Evaluación de Expresiones y Encauzamiento
+
+La manera más simple de evaluar una expresión es realizar las distintas operaciones de consulta una tras otro en el orden establecido por el plan de evaluación. El resultado de cada evaluación se materializa en una relación temporal que será utilizada posteriormente, este proceso recibe el nombre de ***evaluación materializada***. Este método requiere la construcción de relaciones temporales, y por ende la escritura de estas mismas en disco, lo que no es muy eficiente.
+Puede mejorarse este método utilizando ***memoria intermedia doble***, de este modo una de las memorias es utilizada para realizar la ejecución de programa y en la otra se irán copiando todos los resultados de las consultas. Esta alternativa no es muy deseable debido a la sobrecarga adicional que recibiría el gestor de memoria intermedia.
+Un enfoque alternativo es evaluar varias operaciones de manera simultánea en un cauce, con los resultados de una operación pasados a la siguiente, sin la necesidad de almacenar relaciones temporales, reduciendo al mínimo la cantidad de archivos intermedios. Este proceso se lleva a cabo combinando varias operaciones relacionales en un *encauzamiento* de operaciones, en el cual se le pasan los resultados de una operación a la siguiente de forma inmediata, eliminando así los costes de leer y escribir archivos intermedios. Este tipo de operaciones recibe el nombre de ***evaluación encauzada***.
+
+[^1]: Para saber cuáles son las reglas de equivalencia y sus propiedades ver página 477 del Silberschatz.
 [^2]: Para saber como se calculan las estimaciones de las distintas operaciones del álgebra relacional puede leer el Silberschartz de la sección 14.3.2 hasta la 14.3.5.
 [^3]: Más detalles sobre el algoritmo empleado por este enfoque y sus detalle en las páginas 489 y 490 del Silberschatz.
