Unidad 9 done y unidad 10 work in progress | DB

--- a/4º Año/Bases de Datos/Unidad 10/3. Granularidad y Aislamiento.md
+++ b/4º Año/Bases de Datos/Unidad 10/3. Granularidad y Aislamiento.md
@@ -1,4 +1,6 @@
-Si $T_i$ necesita bloquear todos los registros de la base de datos, utilizar un protocolo de bloqueo consumiría mucho tiempo, convendría que $T_i$ utilice un solo bloqueo para toda la base de datos. Si $T_i$ necesita solo unos cuantos registros y se bloquea toda la base de datos, se perdería mucha concurrencia, lo que se necesita es un mecanismo que le permita definir al sistema múltiples niveles de granularidad. Para esto, se debe definir una jerarquía de granularidades de los datos, como se ve en la imagen.
+## Granularidad de los Datos
+
+Si $T_i$ necesita bloquear todos los registros de la base de datos, utilizar un protocolo de bloqueo consumiría mucho tiempo, convendría que $T_i$ utilice un solo bloqueo para toda la base de datos. No obstante, si $T_i$ necesita solo unos cuantos registros y se bloquea toda la base de datos, se perdería mucha concurrencia, lo que se necesita es un mecanismo que le permita definir al sistema múltiples niveles de granularidad. Para esto, se debe definir una jerarquía de granularidades de los datos, como se ve en la imagen.
 
 ![[granularidad-multinivil.png]]
 
@@ -13,9 +15,9 @@ Si un nodo se bloquea en modo intencional se está haciendo un bloqueo explícit
 > - **Modo Intencional-Exclusivo (IX)**: Se realiza un bloqueo explícito en un nivel inferior con bloqueos en modo exclusivo o en modo compartido.
 > - **Modo Intencional-Exclusivo y Compartido(SIX)**: Se realiza un bloqueo en modo exclusivo del subárbol cuya raíz sea el nodo especificado, y dicho bloqueo explícito se produce en un nivel inferior con bloqueos en modo exclusivo.
 
-## Protocolo de Bloqueo de Dos Fases con Granularidad Múltiple
+### Protocolo de Bloqueos con Granularidad Múltiple
 
-El ***protocolo de bloqueo de granularidad múltiple*** siguiente asegura la secuencialidad. En este protocolo cada transacción $T_i$ puede bloquear un nodo $Q$ usando las reglas siguientes:
+El ***protocolo de bloqueo de dos fases con granularidad múltiple*** siguiente asegura la secuencialidad. En este protocolo cada transacción $T_i$ puede bloquear un nodo $Q$ usando las reglas siguientes:
 
 1. Debe respetarse la función de compatibilidad de bloqueos especificada en la siguiente tabla.
 
