--- a/4º Año/Bases de Datos/Unidad 10/4. Gestion de Interbloqueos y Fallos.md
+++ b/4º Año/Bases de Datos/Unidad 10/4. Gestion de Interbloqueos y Fallos.md
@@ -2,26 +2,12 @@ Un sistema está en estado de interbloqueo si existe un conjunto de transaccione
 Para tratar de manejar los interbloqueos existen a grandes razgos tres métodos que nos permiten tratar estas situaciones, las cuales son:
 
 - Mecanismos de evación.
-- Mecanismos de Prevención.
+- Mecanismos de prevención.
 - Mecanismos de detección y recuperación.
 
 ## Mecanismos de Evasión
 
-Estos métodos se vasan en utilizar algún protocolo de control de concurrencia, que no admita que el sistema caiga en un interbloqueo, tal como los protocolos de validación, locks grupal, entre otros. El problema del lock grupal, es la inanición, una transacción que necesita muchos datos, nunca logrará bloquear todos los datos necesarios y quedando en estado de espera indefinidamente. Una alternativa a este método es establecer un orden en que se bloquean los datos. Por ejemplo, para evitar interbloqueos entre tablas, se pueden bloquear primero la tabla maestro y luego la de detalle.
-
-### Protocolos Basados en Gráfos
-
-Teniendo información sobre el orden en el que se acceden a los datos en la base de datos, es posible construir protocolos de bloqueos que no sean de dos fases pero que de todos modos garantice la serializabilidad de las transacciones.
-Para que esto sea posible se debe imponer una ordenación parcial $D = {d_1, d_2, \cdots,d_n}$ de todos los datos. De esta manera si $d_i \rightarrow d_j$, entonces cualquier transacción que acceda a ambos datos debe acceder a $d_i$ antes que a $d_j$. El conjunto $D$ puede verse como un grafo acíclico dirigido, llamado ***grafo de bases de datos***. El caso más sencillo de la utilización de estos gráfos es el protocolo de árbol (grafo con raíz), que está restringido sólo a bloqueos exclusivos.
-
->[!tldr] Protocolo de Árbol
->Cada transacción $T_i$ puede bloquear un dato $Q$ a lo sumo una vez y luego debe seguir las siguientes reglas:
->
->1. El primer bloqueo de $T_i$ , puede ser en cualquier dato. A partir de ese momento, $T_i$ puede bloquear un dato $Q$ sólo si $T_i$ tiene actualmente bloqueado al padre de $Q$.
->2. Los datos pueden desbloquearse en cualquier momento.
->3. Si un dato que $T_i$ bloqueo y desbloqueo, entonces $T_i$ no puede volver a bloquearlo posteriormente.
-> 
->Este cronograma no sólo es serializable en conflictos, sino también no tiene riesgo de interbloqueo, y por lo tanto no se requiere realizar retrocesos. La ventaja con respecto al protocolo de dos fases es que el desbloqueo se puede realizar en cualquier momento, disminuyendo así los tiempos de espera y aumentando la concurrencia. La desventaja es que en algunos casos es necesario que una transacción bloquee datos a los que no accede.
+Estos métodos se vasan en utilizar algún protocolo de control de concurrencia, que no admita que el sistema caiga en un interbloqueo, tal como los protocolos de validación, locks grupal o los protocolos basados en grafos. El problema del lock grupal es la inanición, ya que una transacción que necesita muchos datos, nunca logrará bloquear todos los datos necesarios, quedando en estado de espera indefinidamente. Una alternativa a este método es establecer un orden en que se bloquean los datos como lo hacen los protocolos de grafos. Por ejemplo, para evitar interbloqueos entre tablas, se pueden bloquear primero la tabla maestro y luego la de detalle.
 
 ## Mecanismos Prevención
 
