--- a/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
+++ b/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
@@ -1,4 +1,4 @@
-Una transacción es una unidad de programa que accede y posiblemente actualiza varios elementos de información. Una transacción puede contener única sentencia SQL o varias de estas. Las transacciones poseen las siguientes propiedades:
+Una transacción es una unidad de programa que accede y posiblemente actualiza varios elementos de información, dicha transacción puede contener única sentencia SQL o varias de estas. Las transacciones deben poseer las siguientes propiedades:
 
 - **Atomicidad**: Los cambios provocados por una transacción o se completan todos (commit), o se deshacen todos (rollback).
 - **Consistencia**: Las bases de datos asegura que cualquier transacción llevará a la base de datos de un estado válido a otro estado válido, manteniendo siempre las reglas de integridad definidas.
@@ -7,7 +7,21 @@ Una transacción es una unidad de programa que accede y posiblemente actualiza v
 
 Las transacciones en los sistemas de gestión de bases de datos se pueden implementar de dos formas distintas, mediante el uso de bitácoras o a través de un mecanismo de doble paginación.
 
-## Fallos en las Transacciones
+## Estados y Fallos de las Transacciones
+
+En ausencia de fallos, todas las transacciones se completan con éxito. Sin embargo, una transacción puede que no siempre termine su ejecución con éxito, este tipo de transacciones se dice que fueron ***abortadas***. En caso de que una transacción, se debe preservar la propiedad de atomicidad y consistencia de la base de datos por lo que se debe deshacer cualquier cambio que haya realizado dicha transacción sobre la base de datos. En caso de que la transacción se haya ***comprometido*** los datos se plasman en la base de datos.
+Con el fin de gestionar de mejor manera la concurrencia de las transacciones, una transacción puede estar en solo uno de los siguientes estados:
+
+- **Activa**: Estado inicial de la toda transacción. Las transacciones permanecen en este estado durante su ejecución.
+- **Parcialmente comprometida**: Estado alcanzado después de ejecutarse la última instrucción.
+- **Fallida**: Estado alcanzado tras descubrir que no puede continuar la ejecución normal.
+- **Abortada**: Estado alcanzado después del retroceso de la transacción y de haber restablecido la base de datos a su estado anterior al comienzo de la transacción.
+- **Comprometida**: Estado alcanzado tras completarse con éxito la transacción.
+
+![[estado-transaciones.png]]
+
+>[!tldr] Transacciones Compensadores
+>En el caso de que una transacción se comprometa y los cambios de esta transacción se reflejan en la base de datos, en tal caso no se puede abortar esa transacción. En caso de querer revertir los cambios se deberá ejecutar una ***transacción compensadora*** que revierta los cambios. Aunque las bases de datos emplean otros métodos para evitar que este tipo de transacciones se comprometan indebidamente.
 
 En el contexto de las transacciones en bases de datos, existen dos tipos principales de fallos cuando se están ejecutando las transacciones:
 
@@ -62,7 +76,8 @@ Para garantizar la atomicidad en las transacciones, es necesario seguir un orden
 3. Antes de grabar en la base de datos un bloque que está en memoria principal, deben haberse grabado en disco todos los registros de bitácora que contienen los cambios de los datos de ese bloque.
 
 Este proceso asegura que todos los cambios realizados por una transacción se registran de manera segura y ordenada, manteniendo así la atomicidad de las transacciones.
-Por otro lado, para garantizar la durabilidad de las transacciones, es fundamental tener en cuenta que la memoria principal es mucho más pequeña que la memoria secundaria. Además, el intercambio de datos entre estas dos memorias puede ser costoso en términos de tiempo. Adicionalmente, si no hay espacio disponible en los buffers intermedios para cargar un bloque, será necesario eliminar alguno de los bloques que se encuentran en la memoria principal. Es por esta razón que algunos sistemas de gestión de bases de datos implementan su buffer dentro de la memoria virtual del sistema operativo. La base de datos en sí se almacena en un sistema de archivos del sistema operativo, mientras que este último gestiona las transferencias entre los archivos, la base de datos y el registro intermedio en memoria virtual. Esto asegura que se cumplan los requisitos de durabilidad mencionados anteriormente.
+Por otro lado, para garantizar la durabilidad de las transacciones, es fundamental tener en cuenta que la memoria principal es mucho más pequeña que la memoria secundaria. Además, el intercambio de datos entre estas dos memorias puede ser costoso en términos de tiempo. Adicionalmente, si no hay espacio disponible en los buffers intermedios para cargar un bloque, será necesario eliminar alguno de los bloques que se encuentran en la memoria principal.
+Es por esta razón que algunos sistemas de gestión de bases de datos implementan su buffer dentro de la memoria virtual del sistema operativo. La base de datos en sí se almacena en un sistema de archivos del sistema operativo, mientras que este último gestiona las transferencias entre los archivos, la base de datos y el registro intermedio en memoria virtual. Esto asegura que se cumplan los requisitos de durabilidad mencionados anteriormente.
 Generalmente, los gestores de bases de datos reservan parte de la memoria principal para utilizarla como buffers que ellos mismos gestionan, en lugar del sistema operativo. Esto es así, ya que las bases de datos manejan conceptos tales como bloques clavados y salidas forzadas, conceptos los cuales no son entendidos por los sistemas operativos, en parte porque no fueron diseñados para llevar a cabo este tipo de tareas.
 
 #### Puntos de Verificación
@@ -85,6 +100,9 @@ En el caso de que el sistema en cuestión esté utilizando una técnica de modif
 Una forma alternativa de implementar las transacciones es utilizando doble paginación, en este caso la base de datos está compuesta por una cantidad determinada de bloques de longitud fijas llamada ***páginas***. Estas bases de datos poseen una tabla de paginación que contiene la dirección en disco de las páginas donde se almacenan los bloques.
 Para la recuperación ante fallos, se emplean dos tablas de paginación una tabla actual y su duplicado. Al iniciar la transacción, ambas tablas son idénticas, pero solo a la tabla actual se le realizan las operaciones de escritura. La tabla de paginación duplicada se almacena en disco, conservando el estado de la base de datos previo a la transacción, lo que permite que el sistema se recupere en caso de que la transacción falle o sea abortada.
 Al finalizar la transacción, la tabla de paginación actual se guarda en disco, convirtiéndose en el nuevo duplicado. Si se produce una caída y se pierde la tabla actual, el sistema de recuperación utiliza el duplicado para restaurar el estado anterior de la base de datos.
+
+![[doble-paginación.png]]
+
 Para comprometer una transacción, se deben seguir los siguientes pasos:
 
 1. Asegurarse de que todas las páginas del Registro Intermedio (RI) en memoria principal que hayan sido modificadas por la transacción se graben en disco (esto no afecta a las páginas de la Tabla de Paginación doble).
